assert(UseCompressedClassPointers) failed in universe.hpp

XMLWordPrintable

    • b20

        compiler/gcbarriers/UnsafeIntrinsicsTest.java tier1, tier2
        gc/stress/gcbasher/TestGCBasherWithZ.java tier4
        gc/stress/gcold/TestGCOldWithZ.java tier4

        Running the above tests in CDS mode results in the following assert failure:

        open/src/hotspot/share/memory/universe.hpp:249), pid=12790, tid=12792
        # assert(UseCompressedClassPointers) failed: no compressed klass ptrs?

              Assignee:
              Per Liden (Inactive)
              Reporter:
              Calvin Cheung (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: